# clusterduck

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: generate_config_docs.py
example/: my_app.py  train.py
example/conf/: config.yaml  config_bwcluster.yaml
example/conf/model/: convnet.yaml  transformer.yaml
example/conf/optim/: optuna.yaml  optuna_clusterduck.yaml
example/conf/platform/: bwunicluster.yaml  horeka.yaml  horeka_1gpu.yaml  horeka_4.yaml  horeka_exclusive.yaml  horeka_node_4tasks.yaml  horeka_optuna.yaml  juelich.yaml  juelich_4.yaml  juelich_node.yaml  juelich_node_4tasks.yaml  kluster.yaml  kluster_1gpu.yaml  kluster_4.yaml  kluster_node_4tasks.yaml  local_debug.yaml  local_optuna.yaml  slurm_debug.yaml
example/conf/platform_optim/: clusterduck_optuna.yaml
hydra_plugins/clusterduck_launcher/: _core.py  _logging.py  _process_manager.py  _resources.py  _run.py  _slurm.py  _utils.py  _worker_pool.py  _wrapped_task.py  clusterduck_launcher.py  config.py  process_manager.py  resource_manager.py  resources.py
hydra_plugins/clusterduck_launcher/conf/hydra/launcher/logging/: default.yaml  verbose.yaml
hydra_plugins/clusterduck_launcher/conf/hydra/launcher/manager_logging/: default.yaml
test/: a_dp.py  dask_test.py  test.py  test2.py
tests/: print_env.py  print_env.sh  print_env_horeka.sh  print_env_kluster.sh  submission.sh
tests/conf/: print_env.yaml
tests/conf/platform/: horeka_4.yaml  kluster_4.yaml
