[metadata]
name = clusterduck
version = 0.0.1
author = Balazs Gyenes and Nicolas Schreiber
author_email = balazs.gyenes@kit.edu
description = A hydra plugin for batching small tasks into SLURM jobs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ALRhub/clusterduck
project_urls =
    Bug Tracker = https://github.com/ALRhub/clusterduck/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.9
install_requires = 
    hydra-core >= 1.1.0.dev7
    submitit >= 1.3.3

[options.extras_require]
all =
    %(test)s
test = 
    pytest

[options.packages.find]
include = clusterduck*
exclude = clusterduck.*.tests
