[metadata]
name = clusterduck
version = 2.0.0
author = Balazs Gyenes, Nicolas Schreiber
author_email = balazs.gyenes@kit.edu, nicolas.schreiber@kit.edu
description = A hydra launcher plugin for SLURM clusters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ALRhub/clusterduck
project_urls =
    Bug Tracker = https://github.com/ALRhub/clusterduck/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    hydra-core >= 1.1.0.dev7
    cloudpickle

[options.extras_require]
dev =
    psutil
    pytest
    pycuda
all =
    clusterduck[dev]

[options.packages.find]
include = hydra_plugins.*
